TEST_PROGRAMS/INVALID/08/badDecl.go
package main;

func main() {
  var a int = 1;
  var package = 3;
}
